macro/derive/tests/ui_fail/struct_from_variant.rs
#[derive(iroha_derive::FromVariant)]
struct NotAnEnum;

fn main() {}
